Calcular correlação entre ações

--- a/correlation-analyzer.ipynb
+++ b/correlation-analyzer.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 304,
+   "execution_count": 467,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 305,
+   "execution_count": 468,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 306,
+   "execution_count": 469,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 307,
+   "execution_count": 470,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 308,
+   "execution_count": 471,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 309,
+   "execution_count": 472,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 310,
+   "execution_count": 473,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,187 +130,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 312,
+   "execution_count": 474,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def classify_correlation(correlation):\n",
+    "    if correlation <= -0.7:\n",
+    "        return \"IsStrongNegativeCorrelated\"\n",
+    "    elif -0.7 < correlation <= -0.3:\n",
+    "        return \"IsWeakNegativeCorrelated\"\n",
+    "    elif -0.3 < correlation < 0.3:\n",
+    "        return \"IsNotCorrelated\"\n",
+    "    elif 0.3 <= correlation < 0.7:\n",
+    "        return \"IsWeakPositiveCorrelated\"\n",
+    "    else:\n",
+    "        return \"IsStrongPositiveCorrelated\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 475,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calculate_correlation(asset1, asset2):\n",
+    "    history1 = get_history(asset1)\n",
+    "    history2 = get_history(asset2)\n",
+    "\n",
+    "    close1 = history1[['Date', 'Close']].rename(columns={'Close': f'Close_{asset1}'})\n",
+    "    close2 = history2[['Date', 'Close']].rename(columns={'Close': f'Close_{asset2}'})\n",
+    "\n",
+    "    combined_data = pd.merge(close1, close2, on='Date')\n",
+    "    correlation = combined_data[f'Close_{asset1}'].corr(combined_data[f'Close_{asset2}'])\n",
+    "    correlation = float(round(correlation, 2))\n",
+    "\n",
+    "    classification = classify_correlation(correlation)\n",
+    "    return {'correlation':  correlation, 'result': classification}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 476,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2023-12-13 16:48:59.546426 2024-12-12 16:48:59.546426 csv_files/petz3_historical_data.csv\n",
-      "retornando arquivo local:  csv_files/petz3_historical_data.csv\n"
+      "retornando arquivo local:  csv_files/bbas3_historical_data.csv\n",
+      "retornando arquivo local:  csv_files/binc11_historical_data.csv\n"
      ]
     },
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Date</th>\n",
-       "      <th>Adj Close</th>\n",
-       "      <th>Close</th>\n",
-       "      <th>High</th>\n",
-       "      <th>Low</th>\n",
-       "      <th>Open</th>\n",
-       "      <th>Volume</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2023-12-13</td>\n",
-       "      <td>4.15</td>\n",
-       "      <td>4.42</td>\n",
-       "      <td>4.44</td>\n",
-       "      <td>4.12</td>\n",
-       "      <td>4.21</td>\n",
-       "      <td>13530900</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2023-12-14</td>\n",
-       "      <td>3.95</td>\n",
-       "      <td>4.20</td>\n",
-       "      <td>4.73</td>\n",
-       "      <td>4.19</td>\n",
-       "      <td>4.48</td>\n",
-       "      <td>21645100</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2023-12-15</td>\n",
-       "      <td>3.69</td>\n",
-       "      <td>3.93</td>\n",
-       "      <td>4.25</td>\n",
-       "      <td>3.90</td>\n",
-       "      <td>4.24</td>\n",
-       "      <td>27631000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2023-12-18</td>\n",
-       "      <td>3.63</td>\n",
-       "      <td>3.86</td>\n",
-       "      <td>4.01</td>\n",
-       "      <td>3.81</td>\n",
-       "      <td>3.99</td>\n",
-       "      <td>19765500</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2023-12-19</td>\n",
-       "      <td>3.53</td>\n",
-       "      <td>3.76</td>\n",
-       "      <td>3.92</td>\n",
-       "      <td>3.75</td>\n",
-       "      <td>3.89</td>\n",
-       "      <td>23051400</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>246</th>\n",
-       "      <td>2024-12-05</td>\n",
-       "      <td>4.20</td>\n",
-       "      <td>4.20</td>\n",
-       "      <td>4.27</td>\n",
-       "      <td>4.15</td>\n",
-       "      <td>4.21</td>\n",
-       "      <td>6549900</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>247</th>\n",
-       "      <td>2024-12-06</td>\n",
-       "      <td>3.99</td>\n",
-       "      <td>3.99</td>\n",
-       "      <td>4.22</td>\n",
-       "      <td>3.99</td>\n",
-       "      <td>4.20</td>\n",
-       "      <td>6327700</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>248</th>\n",
-       "      <td>2024-12-09</td>\n",
-       "      <td>3.81</td>\n",
-       "      <td>3.81</td>\n",
-       "      <td>4.10</td>\n",
-       "      <td>3.75</td>\n",
-       "      <td>3.98</td>\n",
-       "      <td>10485900</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>249</th>\n",
-       "      <td>2024-12-10</td>\n",
-       "      <td>4.10</td>\n",
-       "      <td>4.10</td>\n",
-       "      <td>4.14</td>\n",
-       "      <td>3.80</td>\n",
-       "      <td>3.90</td>\n",
-       "      <td>10448200</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>250</th>\n",
-       "      <td>2024-12-11</td>\n",
-       "      <td>4.36</td>\n",
-       "      <td>4.36</td>\n",
-       "      <td>4.36</td>\n",
-       "      <td>4.08</td>\n",
-       "      <td>4.10</td>\n",
-       "      <td>7306600</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>251 rows × 7 columns</p>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "           Date  Adj Close  Close  High   Low  Open    Volume\n",
-       "0    2023-12-13       4.15   4.42  4.44  4.12  4.21  13530900\n",
-       "1    2023-12-14       3.95   4.20  4.73  4.19  4.48  21645100\n",
-       "2    2023-12-15       3.69   3.93  4.25  3.90  4.24  27631000\n",
-       "3    2023-12-18       3.63   3.86  4.01  3.81  3.99  19765500\n",
-       "4    2023-12-19       3.53   3.76  3.92  3.75  3.89  23051400\n",
-       "..          ...        ...    ...   ...   ...   ...       ...\n",
-       "246  2024-12-05       4.20   4.20  4.27  4.15  4.21   6549900\n",
-       "247  2024-12-06       3.99   3.99  4.22  3.99  4.20   6327700\n",
-       "248  2024-12-09       3.81   3.81  4.10  3.75  3.98  10485900\n",
-       "249  2024-12-10       4.10   4.10  4.14  3.80  3.90  10448200\n",
-       "250  2024-12-11       4.36   4.36  4.36  4.08  4.10   7306600\n",
-       "\n",
-       "[251 rows x 7 columns]"
+       "{'correlation': 0.71, 'result': 'IsStrongPositiveCorrelated'}"
       ]
      },
-     "execution_count": 312,
+     "execution_count": 476,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "get_history(\"PETZ3\")\n",
+    "calculate_correlation(\"BBAS3\", \"BINC11\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 477,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# get_history(\"PETZ3\")\n",
     "# get_history(\"PETR4\")\n",
     "# get_history(\"AGRO3\")\n",
     "# get_history(\"ITUB4\")"
