Corrigir erro datetime

--- a/correlation-analyzer.ipynb
+++ b/correlation-analyzer.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 467,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 468,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 469,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 470,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 471,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 472,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 473,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,37 +119,38 @@
     "            new_historical_data.to_csv(file, mode='a', header=False, index=False)\n",
     "            historical_data = pd.concat([historical_data, new_historical_data], ignore_index=True)\n",
     "\n",
-    "            if 'Date' in historical_data.columns:\n",
-    "                historical_data['Date'] = pd.to_datetime(historical_data['Date']).dt.strftime('%Y-%m-%d')\n",
     "    else:\n",
     "        historical_data = get_history_from_yahoo(start_date, end_date, asset)\n",
     "        historical_data.to_csv(file, index=False)\n",
     "\n",
+    "    if 'Date' in historical_data.columns:\n",
+    "        historical_data['Date'] = pd.to_datetime(historical_data['Date']).dt.strftime('%Y-%m-%d')\n",
+    "        \n",
     "    return historical_data                           "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 474,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
     "def classify_correlation(correlation):\n",
     "    if correlation <= -0.7:\n",
-    "        return \"IsStrongNegativeCorrelated\"\n",
+    "        return \"Forte correlação negativa\"\n",
     "    elif -0.7 < correlation <= -0.3:\n",
-    "        return \"IsWeakNegativeCorrelated\"\n",
+    "        return \"Fraca correlação negativa\"\n",
     "    elif -0.3 < correlation < 0.3:\n",
-    "        return \"IsNotCorrelated\"\n",
+    "        return \"Não correlacionado\"\n",
     "    elif 0.3 <= correlation < 0.7:\n",
-    "        return \"IsWeakPositiveCorrelated\"\n",
+    "        return \"Fraca correlação positiva\"\n",
     "    else:\n",
-    "        return \"IsStrongPositiveCorrelated\""
+    "        return \"Forte correlação positiva\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 475,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,42 +171,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 476,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "retornando arquivo local:  csv_files/bbas3_historical_data.csv\n",
-      "retornando arquivo local:  csv_files/binc11_historical_data.csv\n"
+      "retornando arquivo local:  csv_files/csna3_historical_data.csv\n",
+      "retornando arquivo local:  csv_files/cple6_historical_data.csv\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "{'correlation': 0.71, 'result': 'IsStrongPositiveCorrelated'}"
+       "{'correlation': 0.11, 'result': 'Não correlacionado'}"
       ]
      },
-     "execution_count": 476,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "calculate_correlation(\"BBAS3\", \"BINC11\")"
+    "calculate_correlation(\"CSNA3\", \"CPLE6\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 477,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
     "# get_history(\"PETZ3\")\n",
     "# get_history(\"PETR4\")\n",
     "# get_history(\"AGRO3\")\n",
-    "# get_history(\"ITUB4\")"
+    "# get_history(\"ITUB4\")\n",
+    "# get_history(\"SANB11\")"
    ]
   }
  ],
