Add ranking usando formula de Bazin

--- a/ranking-formula-basin.ipynb
+++ b/ranking-formula-basin.ipynb
@@ -2,212 +2,43 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "retornando arquivo local:  csv_files/acoes_b3.csv\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>symbol</th>\n",
-       "      <th>name</th>\n",
-       "      <th>currency</th>\n",
-       "      <th>exchange</th>\n",
-       "      <th>mic_code</th>\n",
-       "      <th>country</th>\n",
-       "      <th>type</th>\n",
-       "      <th>figi_code</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>A1AP34</td>\n",
-       "      <td>Advance Auto Parts, Inc.</td>\n",
-       "      <td>BRL</td>\n",
-       "      <td>Bovespa</td>\n",
-       "      <td>BVMF</td>\n",
-       "      <td>Brazil</td>\n",
-       "      <td>Common Stock</td>\n",
-       "      <td>BBG00RD5RD88</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>A1CR34</td>\n",
-       "      <td>Amcor plc</td>\n",
-       "      <td>BRL</td>\n",
-       "      <td>Bovespa</td>\n",
-       "      <td>BVMF</td>\n",
-       "      <td>Brazil</td>\n",
-       "      <td>Common Stock</td>\n",
-       "      <td>BBG00XV4DNH1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>A1DI34</td>\n",
-       "      <td>Analog Devices, Inc.</td>\n",
-       "      <td>BRL</td>\n",
-       "      <td>Bovespa</td>\n",
-       "      <td>BVMF</td>\n",
-       "      <td>Brazil</td>\n",
-       "      <td>Common Stock</td>\n",
-       "      <td>BBG00R1T27N2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>A1DM34</td>\n",
-       "      <td>Archer-Daniels-Midland Company</td>\n",
-       "      <td>BRL</td>\n",
-       "      <td>Bovespa</td>\n",
-       "      <td>BVMF</td>\n",
-       "      <td>Brazil</td>\n",
-       "      <td>Common Stock</td>\n",
-       "      <td>BBG00R3WWD75</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>A1EE34</td>\n",
-       "      <td>Ameren Corporation</td>\n",
-       "      <td>BRL</td>\n",
-       "      <td>Bovespa</td>\n",
-       "      <td>BVMF</td>\n",
-       "      <td>Brazil</td>\n",
-       "      <td>Common Stock</td>\n",
-       "      <td>BBG00R4Z4BC6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2653</th>\n",
-       "      <td>ZAMP9</td>\n",
-       "      <td>ZAMP S.A.   ON  REC</td>\n",
-       "      <td>BRL</td>\n",
-       "      <td>Bovespa</td>\n",
-       "      <td>BVMF</td>\n",
-       "      <td>Brazil</td>\n",
-       "      <td>Common Stock</td>\n",
-       "      <td>BBG01NPB67D0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2654</th>\n",
-       "      <td>ZAMP9F</td>\n",
-       "      <td>ZAMP S.A.   ON  REC</td>\n",
-       "      <td>BRL</td>\n",
-       "      <td>Bovespa</td>\n",
-       "      <td>BVMF</td>\n",
-       "      <td>Brazil</td>\n",
-       "      <td>Common Stock</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2655</th>\n",
-       "      <td>ZAVC11</td>\n",
-       "      <td>FII ZAVIT C CI</td>\n",
-       "      <td>BRL</td>\n",
-       "      <td>Bovespa</td>\n",
-       "      <td>BVMF</td>\n",
-       "      <td>Brazil</td>\n",
-       "      <td>Common Stock</td>\n",
-       "      <td>BBG01JMJ2BT3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2656</th>\n",
-       "      <td>ZAVI11</td>\n",
-       "      <td>Zavit Real Estate Fund Fundo De Investimento I...</td>\n",
-       "      <td>BRL</td>\n",
-       "      <td>Bovespa</td>\n",
-       "      <td>BVMF</td>\n",
-       "      <td>Brazil</td>\n",
-       "      <td>Common Stock</td>\n",
-       "      <td>BBG019ZZGN05</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2657</th>\n",
-       "      <td>ZIFI11</td>\n",
-       "      <td>Zion Capital Fundo De Investimento Imobiliario...</td>\n",
-       "      <td>BRL</td>\n",
-       "      <td>Bovespa</td>\n",
-       "      <td>BVMF</td>\n",
-       "      <td>Brazil</td>\n",
-       "      <td>Common Stock</td>\n",
-       "      <td>BBG011WT5573</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>2658 rows × 8 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "      symbol                                               name currency  \\\n",
-       "0     A1AP34                           Advance Auto Parts, Inc.      BRL   \n",
-       "1     A1CR34                                          Amcor plc      BRL   \n",
-       "2     A1DI34                               Analog Devices, Inc.      BRL   \n",
-       "3     A1DM34                     Archer-Daniels-Midland Company      BRL   \n",
-       "4     A1EE34                                 Ameren Corporation      BRL   \n",
-       "...      ...                                                ...      ...   \n",
-       "2653   ZAMP9                                ZAMP S.A.   ON  REC      BRL   \n",
-       "2654  ZAMP9F                                ZAMP S.A.   ON  REC      BRL   \n",
-       "2655  ZAVC11                                     FII ZAVIT C CI      BRL   \n",
-       "2656  ZAVI11  Zavit Real Estate Fund Fundo De Investimento I...      BRL   \n",
-       "2657  ZIFI11  Zion Capital Fundo De Investimento Imobiliario...      BRL   \n",
-       "\n",
-       "     exchange mic_code country          type     figi_code  \n",
-       "0     Bovespa     BVMF  Brazil  Common Stock  BBG00RD5RD88  \n",
-       "1     Bovespa     BVMF  Brazil  Common Stock  BBG00XV4DNH1  \n",
-       "2     Bovespa     BVMF  Brazil  Common Stock  BBG00R1T27N2  \n",
-       "3     Bovespa     BVMF  Brazil  Common Stock  BBG00R3WWD75  \n",
-       "4     Bovespa     BVMF  Brazil  Common Stock  BBG00R4Z4BC6  \n",
-       "...       ...      ...     ...           ...           ...  \n",
-       "2653  Bovespa     BVMF  Brazil  Common Stock  BBG01NPB67D0  \n",
-       "2654  Bovespa     BVMF  Brazil  Common Stock           NaN  \n",
-       "2655  Bovespa     BVMF  Brazil  Common Stock  BBG01JMJ2BT3  \n",
-       "2656  Bovespa     BVMF  Brazil  Common Stock  BBG019ZZGN05  \n",
-       "2657  Bovespa     BVMF  Brazil  Common Stock  BBG011WT5573  \n",
-       "\n",
-       "[2658 rows x 8 columns]"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from src.stocks import sock_b3_list\n",
-    "sock_b3_list.get_list()"
+    "from src.stocks import stock_b3_list as b3\n",
+    "from src.formulas import bazins_formula as bazin"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# data = b3.get_list()\n",
+    "# tickers = data.symbol.tolist()\n",
+    "blocked_list = [\"VALE\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# MOCK: Lista de ações para analisar (exemplo: IBOVESPA)\n",
+    "tickers = [\"PETR4\", \"PETR3\", \"VALE3\", \"ITUB4\", \"BBAS3\", \"AAPL34\", \"AGRO3\", \"AGRO3F\"] "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = bazin.process_formula(tickers)\n",
+    "data[~data[\"Ticker Base\"].isin(blocked_list)]"
    ]
   }
  ],
