Add calculo de preço justo

--- a/ranking-formula-basin.ipynb
+++ b/ranking-formula-basin.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,18 +12,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "# data = b3.get_list()\n",
     "# tickers = data.symbol.tolist()\n",
-    "blocked_list = [\"VALE\"]"
+    "blocked_list = []\n",
+    "# blocked_list = [\"VALE\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -73,7 +74,10 @@
        "      <th>EV/EBITDA</th>\n",
        "      <th>Avg Volume 10D</th>\n",
        "      <th>Sector</th>\n",
+       "      <th>Dividend Yield</th>\n",
        "      <th>Ticker Base</th>\n",
+       "      <th>Annual Dividend</th>\n",
+       "      <th>Fair Price</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -88,7 +92,10 @@
        "      <td>11.452000</td>\n",
        "      <td>263400.0</td>\n",
        "      <td>Consumer Defensive</td>\n",
+       "      <td>6.630001</td>\n",
        "      <td>AGRO</td>\n",
+       "      <td>1.550078e+08</td>\n",
+       "      <td>2.583463e+09</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -101,7 +108,26 @@
        "      <td>3.387932</td>\n",
        "      <td>30099830.0</td>\n",
        "      <td>Energy</td>\n",
+       "      <td>13.650000</td>\n",
        "      <td>PETR</td>\n",
+       "      <td>7.004704e+10</td>\n",
+       "      <td>1.167451e+12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>VALE3</td>\n",
+       "      <td>2.384507e+11</td>\n",
+       "      <td>9.038900e+10</td>\n",
+       "      <td>2.532900e+10</td>\n",
+       "      <td>8.381000e+10</td>\n",
+       "      <td>3.035107e+11</td>\n",
+       "      <td>3.621414</td>\n",
+       "      <td>22313970.0</td>\n",
+       "      <td>Basic Materials</td>\n",
+       "      <td>10.950000</td>\n",
+       "      <td>VALE</td>\n",
+       "      <td>2.611035e+10</td>\n",
+       "      <td>4.351725e+11</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -111,13 +137,20 @@
        "  Ticker    Market Cap          Debt          Cash        EBITDA  \\\n",
        "0  AGRO3  2.337976e+09  1.183075e+09  1.807540e+08  2.916780e+08   \n",
        "1  PETR4  5.131651e+11  3.221570e+11  7.783800e+10  2.235830e+11   \n",
+       "2  VALE3  2.384507e+11  9.038900e+10  2.532900e+10  8.381000e+10   \n",
        "\n",
-       "   Enterprise Value  EV/EBITDA  Avg Volume 10D              Sector Ticker Base  \n",
-       "0      3.340297e+09  11.452000        263400.0  Consumer Defensive        AGRO  \n",
-       "1      7.574841e+11   3.387932      30099830.0              Energy        PETR  "
+       "   Enterprise Value  EV/EBITDA  Avg Volume 10D              Sector  \\\n",
+       "0      3.340297e+09  11.452000        263400.0  Consumer Defensive   \n",
+       "1      7.574841e+11   3.387932      30099830.0              Energy   \n",
+       "2      3.035107e+11   3.621414      22313970.0     Basic Materials   \n",
+       "\n",
+       "   Dividend Yield Ticker Base  Annual Dividend    Fair Price  \n",
+       "0        6.630001        AGRO     1.550078e+08  2.583463e+09  \n",
+       "1       13.650000        PETR     7.004704e+10  1.167451e+12  \n",
+       "2       10.950000        VALE     2.611035e+10  4.351725e+11  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
